--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ go:
   - 1.8
   - tip
 
+before_install:
+  - go get github.com/mattn/goveralls
+  - go get golang.org/x/tools/cmd/cover
 script:
-  - go test -v $(go list ./... | grep -v vendor)
+  - $HOME/gopath/bin/goveralls -service=travis-ci
