--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ env:
   - GO111MODULE=on
 
 go:
-  - "1.11.x"
-  - "1.12.x"
-  - "tip"
+  - 1.11.x
+  - 1.12.x
+  - 1.13.x
+  - tip
 
 before_install:
   - go get github.com/mattn/goveralls
@@ -16,3 +17,11 @@ install:
   
 script:
   - $HOME/gopath/bin/goveralls -service=travis-ci
+
+deploy:
+- provider: script
+  skip_cleanup: true
+  script: curl -sL https://git.io/goreleaser | bash
+  on:
+    tags: true
+    condition: $TRAVIS_GO_VERSION =~ ^1\.13
